# bazel_rust_example

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  M_DULE.bazel   README.md  WORKSPACE  WORKSPACE.bzlmod  build_image.bzl  bzl_intro.md  bzlmod.md  cargo-bazel-lock.json  makefile  test.sh
config/bzlmod/: MODULE.bazel
config/mod/: MODULE.bazel
config/workspace/: WORKSPACE
crates/: BUILD.bazel
crates/grpc_client/: BUILD.bazel
crates/grpc_server/: BUILD.bazel  Cargo.toml
crates/grpc_server/src/: db_manager.rs  main.rs  server.rs
crates/hello_cross/: BUILD.bazel  hello_world_test.sh
crates/proto_bindings/: BUILD.bazel  Cargo.toml
crates/proto_bindings/proto/: helloworld.proto  job.proto
crates/proto_bindings/src/: lib.rs
docs/: WORKSPACE
grpc_client/: BUILD.bazel  Cargo.toml
grpc_server/: BUILD.bazel  Cargo.toml
hello_cross/: BUILD.bazel  Cargo.toml
linker_config/: BUILD.bazel
musl_container/: BUILD.bazel
musl_container/src/: main.rs
proto_bindings/: Cargo.toml
rest_tokio/: BUILD.bazel
rest_tokio/src/: main.rs
scripts/: build.sh  container.sh  doc.sh  rebuild.sh  release.sh  run_default.sh  test.sh
