load("@rules_multirun//:defs.bzl", "command", "multirun")

config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

filegroup(
    name = "image",
    srcs = [
        "//grpc_server:image",
    ],
    visibility = ["//visibility:public"],
)


multirun(
    name = "push",
    commands = [
        "push_images",
    ],
    jobs = 0, # Set to parallel
    visibility = ["//visibility:public"],
)

command(
    name = "push_images",
    command =  "//grpc_server:push",
    arguments = [], # Optional arguments passed directly to the tool
)
