load("@rules_multirun//:defs.bzl", "command", "multirun")

config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

filegroup(
    name = "image",
    srcs = [
        "//grpc_server:image",
        "//rest_tokio:image",
    ],
    visibility = ["//visibility:public"],
)


multirun(
    name = "push",
    commands = [
        "push_grpc_server",
        "push_rest_tokio",
    ],
    jobs = 1, # Set to parallel
    visibility = ["//visibility:public"],
)

command(
    name = "push_grpc_server",
    command =  "//grpc_server:push",
    arguments = [], # Optional arguments passed directly to the tool
)

command(
    name = "push_rest_tokio",
    command =  "//rest_tokio:push",
    arguments = [], # Optional arguments passed directly to the tool
)
