[package]
name = "grpc_client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "client"
path = "src/main.rs"


[dependencies]
# Internal crates
proto_bindings = { workspace = true }
# External crates
tokio = { workspace = true }
tonic = { workspace = true }
