[package]
name = "grpc_server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "server"
path = "src/main.rs"


[dependencies]
# Custom Memory Allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }
# Internal crates
proto_bindings = { workspace = true }
# External crates
tokio = { workspace = true }
tonic = { workspace = true }