load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "hello_world_x86_64_musl",
    srcs = ["src/main.rs"],
    platform = "//build/platforms:linux_x86_64_musl",
    deps = [],
)

rust_binary(
    name = "hello_world_linux_arm64_musl",
    srcs = ["src/main.rs"],
    platform = "//build/platforms:linux_arm64_musl",
    deps = [],
)

rust_binary(
    name = "hello_world_x86_64",
    srcs = ["src/main.rs"],
    platform = "//build/platforms:linux-x86_64",
    deps = [],
)

rust_binary(
    name = "hello_world_aarch64",
    srcs = ["src/main.rs"],
    platform = "//build/platforms:linux-aarch64",
    deps = [],
)

[
    sh_test(
        name = "hello_world_{}_test".format(target),
        srcs = ["hello_world_test.sh"],
        args = [
            "$(rlocationpath :hello_world_{})".format(target),
            arch_string,
        ],
        data = [
            ":hello_world_{}".format(target),
        ],
        deps = [
            "@bazel_tools//tools/bash/runfiles",
        ],
    )
    for (target, arch_string) in [
        ("aarch64", "AArch64"),
        ("x86_64", "X86-64"),
    ]
]
