[package]
name = "grpc_server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "client"
path = "src/bin/client/main.rs"


[[bin]]
name = "server"
path = "src/bin/server/main.rs"


[dependencies]
# Internal crates
proto_bindings = { workspace = true }
# External crates
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

