load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])


platform(
    name = "linux-aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "linux-x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

rust_binary(
    name = "hello_world_x86_64",
    srcs = ["src/main.rs"],
    platform = ":linux-x86_64",
    deps = [],
)

rust_binary(
    name = "hello_world_aarch64",
    srcs = ["src/main.rs"],
    platform = ":linux-aarch64",
    deps = [],
)



[
    sh_test(
        name = "hello_world_{}_test".format(target),
        srcs = ["hello_world_test.sh"],
        args = [
            "$(rlocationpath :hello_world_{})".format(target),
            arch_string,
        ],
        data = [
            ":hello_world_{}".format(target),
        ],
        deps = [
            "@bazel_tools//tools/bash/runfiles",
        ],
    )
    for (target, arch_string) in [
        ("aarch64", "AArch64"),
        ("x86_64", "X86-64"),
    ]
]
