load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")


proto_library(
    name = "proto_bindings",
    srcs = [
          "proto/helloworld.proto",
    ],
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "rust_proto",
    proto = ":proto_bindings",
    visibility = ["//visibility:public"],
)
