[package]
name = "proto_bindings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "proto_bindings"
path = "src/lib.rs"


[dependencies]
# External crates
prost =  {workspace = true}
tokio = {workspace = true}
tonic =  {workspace = true}
tonic-health =  {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}
